# mcp-auth-py

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  PRODUCTION_READY.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: audit_guide.md  caching_guide.md  enterprise_guide.md  production_deployment.md  production_rbac_guide.md  rbac_extension.md  realtime_guide.md
examples/: complete_app.py  docker_app.py  multi_provider.py  production_example.py  rbac_demo.py  server.py
k8s/: configmap.yaml  deployment.yaml  redis-deployment.yaml  secret.yaml  service.yaml
mcp_auth/: __init__.py  adapters.py  audit.py  caching.py  middleware.py  middleware_security.py  models.py  performance.py  realtime.py  security.py  settings.py  setup.py
mcp_auth/enterprise/: __init__.py  compliance.py
mcp_auth/providers/: __init__.py  aws.py  azure.py  base.py  discord.py  github.py  google.py  local.py  oidc.py  redis_jwks.py  registry.py
mcp_auth/rbac/: __init__.py  admin.py  decorators.py  (+2 more)
scripts/: generate_token.py  setup-dev.sh  setup.py  validate_install.py
tests/: conftest.py  generate_token.py  setup_wizard.py  test_adapters.py  test_adapters_async.py  test_adapters_wrappers.py  test_audit.py  test_auth.py  test_caching.py  test_cloud_providers.py  test_providers.py  test_rbac.py  test_realtime.py  test_redis_jwks.py  test_redis_jwks_integration.py  test_validate_production.py  validate_installation.py  validate_production.py
(+4 files in other folders)
